[package]
name = "chia-wallet-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
confy = "0.5.1"
home = "0.5.5"
chia-observer-wallet-generator = { path = "./chia-observer-wallet-generator" }
hex = "0.4.3"
rust_decimal = "1.32.0"
google-sheets4 = "5.0.3+20230119"
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.6", features = ["json"] }
chrono = "0.4.31"
rusqlite = { version = "0.29.0", features = ["bundled"] }
